fix(rest): add Cart Endpoints
