# rest/src/main/java/com/example/eshop/rest/resources/cart/CartItemResource.java
@@ -1,0 +1,4 @@
+package com.example.eshop.rest.resources.cart;
+
+public record CartItemResource(String ean, int quantity) {
+}
